# orange_navigation

./: .clang-tidy  .gitignore  README.md
.github/: pull_request_template.md
.github/workflows/: ci.yaml
rviz2_plugins/: CMakeLists.txt  package.xml  plugin_description.xml
rviz2_plugins/include/rviz2_plugins/: set_finish_panel.h  state_trigger_panel.h
rviz2_plugins/src/: set_finish_panel.cpp  state_trigger_panel.cpp
rviz_plugins/: CMakeLists.txt  package.xml  plugin_description.xml
rviz_plugins/include/: state_trigger_panel.h
rviz_plugins/src/: state_trigger_panel.cpp
waypoint_manager/: manager_GUI.py  requirements.txt  run_app.sh
waypoint_manager/lib/: mymaplib.py  waypointlib.py
waypoint_manager/test/: map.yaml  waypoints.yaml
waypoint_navigation/: CMakeLists.txt  package.xml
waypoint_navigation/config/: switch_costmaps.yaml
waypoint_navigation/include/: velocity_controller.h  waypoint.h  waypoint_nav.h  waypoint_saver.h
waypoint_navigation/include/waypoint_navigation/: waypoint.h  waypoint_nav.h  waypoint_saver.h
waypoint_navigation/launch/: navigation2_core.launch.xml  waypoint_nav.launch  waypoint_nav.launch.xml  waypoint_saver.launch  waypoint_saver.launch.xml
waypoint_navigation/rviz_cfg/: nav.rviz  record_waypoints.rviz  waypoint_nav.rviz  waypoint_saver.rviz
waypoint_navigation/scripts/: switch_costmaps.yaml  tandem_run_manager.py
waypoint_navigation/src/: velocity_controller.cpp  waypoint_nav.cpp  waypoint_saver.cpp
waypoint_navigation/waypoints_cfg/: waypoints.yaml
