<?xml version="1.0"?>
<package format="2">
  <name>waypoint_navigation</name>
  <version>0.0.0</version>
  <description>The waypoint_navigation package</description>
  <maintainer email="ubuntu@todo.todo">ubuntu</maintainer>
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf</depend>
  <depend>move_base</depend>
  <depend>move_base_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>actionlib</depend>
  <depend>std_srvs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>yaml-cpp</depend>
  <depend>python3-ruamel.yaml</depend>

</package>
